vp8dec: Short circuit gst_vp8_dec_handle_frame if keyframe is missing

https://bugzilla.gnome.org/show_bug.cgi?id=687376